spacing/padding fixes on report and resource pages

--- a/app/javascript/assets/stylesheets/_denizen_quotes.scss
+++ b/app/javascript/assets/stylesheets/_denizen_quotes.scss
@@ -83,7 +83,7 @@
 }
 
 .denizen-quote-body {
-  // padding: 25px !important;
+  padding: 25px !important;
 
   font-family: Playfair Display;
   font-style: normal;
