--- a/app/javascript/assets/stylesheets/_denizen_report.scss
+++ b/app/javascript/assets/stylesheets/_denizen_report.scss
@@ -86,19 +86,19 @@
   background: transparent; /* make scrollbar transparent */
 }
 
-.report-col-2{
-  // background-color: red;
-  // padding-right: 0px;
-  // white-space: nowrap;
-}
+// .report-col-2{
+//   // background-color: red;
+//   // padding-right: 0px;
+//   // white-space: nowrap;
+// }
 
-.nowrap {
-  // white-space: nowrap;
-}
+// .nowrap {
+//   // white-space: nowrap;
+// }
 
-.report-col-9{
+// .report-col-9{
 
-}
+// }
 
 .report-container h2 {
   font-family: Montserrat;
@@ -341,6 +341,11 @@
   .report-chart-category{
     font-size: 14px !important;
   }
+
+  .report-container {
+    padding: 25px 25px 42px 25px !important;
+   
+  }
 }
  
 // }
@@ -361,3 +366,7 @@
 //   }
  
 // }
+
+
+
+// yarn add aos@next
