--- a/app/javascript/assets/stylesheets/_denizen_resources.scss
+++ b/app/javascript/assets/stylesheets/_denizen_resources.scss
@@ -151,7 +151,6 @@
   }
 
   .resourceCard .card-body {
-    background-color: red;
     padding-left: 25px;
     padding-right: 25px;
   }
